# wayproto

./: .gitignore  Cargo.toml
src/: lib.rs  msg.rs
