[package]
name = "wayproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.77"
bytemuck = "1.15.0"
mio = "0.8.10"
nix = { version = "0.27.1", features = ["socket", "uio"] }
proptest = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
smallvec = "1.13.2"
test-strategy = "0.3.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
